--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:label="usdinfra"
+        android:label="USD Unique"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
