--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  lottie:
+#  lottie:
   image_picker:
   infinite_carousel:
   firebase_core:
@@ -69,9 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/animations/welcome.json
-    - assets/animations/login.json
-    - assets/logo.png
+    - assets/animations/logo.png
+#    - assets/logo.png
     - assets/icons/share.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -98,3 +97,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+assets/animations/logo:
+  png:
