--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,15 +2,29 @@
 
 
     <uses-permission android:name="android.permission.INTERNET" />
+ <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- ✅ FIXED -->
 
+    <!-- Required feature for calling -->
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
     <!-- Permission to open external apps like WhatsApp -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<!-- <intent-filter>
+    <action android:name="android.intent.action.VIEW"/>
+    <category android:name="android.intent.category.DEFAULT"/>
+    <category android:name="android.intent.category.BROWSABLE"/>
+</intent-filter> -->
 
     <application
         android:label="USD Unique"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         >
+        <!-- <intent-filter>
+    <action android:name="android.intent.action.VIEW"/>
+    <category android:name="android.intent.category.DEFAULT"/>
+    <category android:name="android.intent.category.BROWSABLE"/>
+</intent-filter> -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,6 +44,9 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <!-- <action android:name="android.intent.action.VIEW"/>
+    <category android:name="android.intent.category.DEFAULT"/>
+    <category android:name="android.intent.category.BROWSABLE"/> -->
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
