--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   fluttertoast: ^8.2.12
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
