--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   fluttertoast: ^8.2.12
   google_fonts: ^6.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +81,15 @@ flutter:
     - assets/icons/share.png
     - assets/icons/lock_icon.svg
     - assets/icons/logoh1.png
+    - assets/images/home_painting.jpeg
+    - assets/images/home_loan.jpeg
+    - assets/images/construction.jpeg
+    - assets/images/legal.jpeg
+    - assets/images/slide1.jpeg
+    - assets/images/slide2.jpeg
+    - assets/images/slide3.jpeg
+    - assets/images/first.jpeg
+
     # - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
